add label bindings

--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -49,8 +49,10 @@
 
 	<ItemGroup>
 	  <None Remove="Resources\Images\" />
+	  <None Remove="Modules\" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Resources\Images\" />
+	  <Folder Include="Modules\" />
 	</ItemGroup>
 </Project>
