add os specific cursor for label links

--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -59,4 +59,8 @@
 	  <Folder Include="Modules\" />
 	  <Folder Include="Resources\Images\" />
 	</ItemGroup>
+
+	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
+		<DefineConstants>WINDOWS</DefineConstants>
+	</PropertyGroup>
 </Project>
