--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -46,6 +46,13 @@
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Compile Remove="Resources\Images\**" />
+	  <EmbeddedResource Remove="Resources\Images\**" />
+	  <MauiCss Remove="Resources\Images\**" />
+	  <MauiXaml Remove="Resources\Images\**" />
+	  <None Remove="Resources\Images\**" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
@@ -58,7 +65,6 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Modules\" />
-	  <Folder Include="Resources\Images\" />
 	  <Folder Include="Models\" />
 	</ItemGroup>
 
