change app id to match signed cert

--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -15,7 +15,7 @@
 		<ApplicationTitle>GUvrs</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.guvrs</ApplicationId>
+		<ApplicationId>timothymeadows.guvrs</ApplicationId>
 		<ApplicationIdGuid>4b2d63d1-6e06-4c42-9585-9f9bd363dc26</ApplicationIdGuid>
 
 		<!-- Versions -->
