Fix issue with copying not working due game id not always being populated due to log entry changing. Remove unused CSS.

--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -83,6 +83,10 @@
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\copyicon.png" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Resources\Raw\" />
+	</ItemGroup>
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<DefineConstants>WINDOWS</DefineConstants>
 	</PropertyGroup>
