--- a/GUvrs/GUvrs.csproj
+++ b/GUvrs/GUvrs.csproj
@@ -9,7 +9,7 @@
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<!-- <WindowsPackageType>None</WindowsPackageType> -->
+		<WindowsPackageType>None</WindowsPackageType>
 
 		<!-- Display name -->
 		<ApplicationTitle>GUvrs</ApplicationTitle>
@@ -49,14 +49,18 @@
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
-		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Remove="Resources\Images\**" />
+	  <Compile Remove="Resources\Raw\**" />
 	  <EmbeddedResource Remove="Resources\Images\**" />
+	  <EmbeddedResource Remove="Resources\Raw\**" />
 	  <MauiCss Remove="Resources\Images\**" />
+	  <MauiCss Remove="Resources\Raw\**" />
 	  <MauiXaml Remove="Resources\Images\**" />
+	  <MauiXaml Remove="Resources\Raw\**" />
 	  <None Remove="Resources\Images\**" />
+	  <None Remove="Resources\Raw\**" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -82,10 +86,6 @@
 
 	<ItemGroup>
 	  <MauiImage Include="Resources\Images\copyicon.png" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Resources\Raw\" />
 	</ItemGroup>
 	<PropertyGroup Condition="$(TargetFramework.Contains('-windows'))">
 		<DefineConstants>WINDOWS</DefineConstants>
