--- a/GUvrs/Platforms/MacCatalyst/Info.plist
+++ b/GUvrs/Platforms/MacCatalyst/Info.plist
@@ -26,5 +26,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	<key>com.apple.security.app-sandbox</key>
+    <true/>
 </dict>
 </plist>
